@@ -18,7 +18,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
@@ -166,17 +165,14 @@ public class SourceStorageBatchApiTest extends AbstractRestVerticleTest {
   @Before
   public void setUp(TestContext context) {
     Async async = context.async();
-    SnapshotDaoUtil.deleteAll(PostgresClientFactory.getQueryExecutor(vertx, TENANT_ID)).onComplete(delete -> {
-      if (delete.failed()) {
-        context.fail(delete.cause());
-      }
-      SnapshotDaoUtil.save(PostgresClientFactory.getQueryExecutor(vertx, TENANT_ID), TestMocks.getSnapshots()).onComplete(save -> {
+    SnapshotDaoUtil.deleteAll(PostgresClientFactory.getCachedPool(vertx, TENANT_ID))
+      .compose(v -> SnapshotDaoUtil.save(PostgresClientFactory.getCachedPool(vertx, TENANT_ID), TestMocks.getSnapshots()))
+      .onComplete(save -> {
         if (save.failed()) {
           context.fail(save.cause());
         }
         async.complete();
       });
-    });
   }
 
   @Test
@@ -185,7 +181,7 @@ public class SourceStorageBatchApiTest extends AbstractRestVerticleTest {
     List<Record> expected = TestMocks.getRecords().stream()
       .filter(record -> record.getRecordType().equals(RecordType.MARC_BIB))
       .map(record -> record.withSnapshotId(TestMocks.getSnapshot(0).getJobExecutionId()))
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(expected)
       .withTotalRecords(expected.size());
@@ -208,7 +204,7 @@ public class SourceStorageBatchApiTest extends AbstractRestVerticleTest {
     List<Record> expected = TestMocks.getRecords().stream()
       .filter(record -> record.getRecordType().equals(RecordType.EDIFACT))
       .map(record -> record.withSnapshotId(TestMocks.getSnapshot(0).getJobExecutionId()))
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(expected)
       .withTotalRecords(expected.size());
@@ -498,7 +494,7 @@ public class SourceStorageBatchApiTest extends AbstractRestVerticleTest {
     Async async = testContext.async();
     List<Record> expected = TestMocks.getRecords().stream()
       .filter(record -> record.getRecordType().equals(RecordType.MARC_BIB))
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(expected)
       .withTotalRecords(expected.size());
@@ -518,7 +514,7 @@ public class SourceStorageBatchApiTest extends AbstractRestVerticleTest {
     Async async = testContext.async();
     List<Record> expected = TestMocks.getRecords().stream()
       .map(record -> record.withSnapshotId(TestMocks.getSnapshot(0).getJobExecutionId()))
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(expected)
       .withTotalRecords(expected.size());
@@ -570,7 +566,7 @@ public class SourceStorageBatchApiTest extends AbstractRestVerticleTest {
           .withParsedRecord(parsedRecord)
           .withErrorRecord(errorRecord);
       })
-      .collect(Collectors.toList());
+      .toList();
 
     List<String> previousRecordIds = new ArrayList<>();
 
@@ -588,7 +584,7 @@ public class SourceStorageBatchApiTest extends AbstractRestVerticleTest {
 
       records = records.stream()
         .map(record -> record.withSnapshotId(snapshot.getJobExecutionId()))
-        .collect(Collectors.toList());
+        .toList();
 
       RecordCollection recordCollection = new RecordCollection()
         .withRecords(records)
@@ -660,7 +656,7 @@ public class SourceStorageBatchApiTest extends AbstractRestVerticleTest {
     List<Record> expected = TestMocks.getRecords().stream()
       .filter(record -> record.getRecordType().equals(RecordType.MARC_BIB))
       .map(record -> record.withSnapshotId(snapshotId))
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(expected)
       .withTotalRecords(expected.size());
@@ -698,7 +694,7 @@ public class SourceStorageBatchApiTest extends AbstractRestVerticleTest {
     List<Record> expected = TestMocks.getRecords().stream()
       .filter(record -> record.getRecordType().equals(RecordType.MARC_BIB))
       .map(record -> record.withSnapshotId(snapshot.getJobExecutionId()))
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(expected)
       .withTotalRecords(expected.size());
@@ -956,7 +952,7 @@ public class SourceStorageBatchApiTest extends AbstractRestVerticleTest {
     List<Record> original = TestMocks.getRecords().stream()
       .filter(record -> record.getRecordType().equals(RecordType.MARC_BIB))
       .map(record -> record.withSnapshotId(TestMocks.getSnapshot(0).getJobExecutionId()))
-      .collect(Collectors.toList());
+      .toList();
     RecordCollection recordCollection = new RecordCollection()
       .withRecords(original)
       .withTotalRecords(original.size());
@@ -975,7 +971,7 @@ public class SourceStorageBatchApiTest extends AbstractRestVerticleTest {
     async = testContext.async();
     List<Record> updated = original.stream()
       .map(record -> record.withExternalIdsHolder(record.getExternalIdsHolder().withInstanceId(UUID.randomUUID().toString())))
-      .collect(Collectors.toList());
+      .toList();
     recordCollection
       .withRecords(updated)
       .withTotalRecords(updated.size());
